--- a/test/fixtures/characters.yml
+++ b/test/fixtures/characters.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  tag: MyString
-  deleted_at: 2026-01-25 16:23:33
+luffy:
+  tag: character-one
+  contact_address: one@mugiwara.com
 
-two:
-  tag: MyString
-  deleted_at: 2026-01-25 16:23:33
+zoro:
+  tag: character-two
+  contact_address: two@mugiwara.com
