--- a/test/fixtures/padlock/passwords.yml
+++ b/test/fixtures/padlock/passwords.yml
@@ -1,17 +1,33 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  character: one
-  replacement_padlock: one
-  key_digest: MyString
+<% key_digest = BCrypt::Password.create("password") %>
+
+luffys_active_password:
+  character: luffy
+  key_digest: <%= key_digest %>
   expires_at: 2026-01-25
   unlocked_by: 1
   last_unlocked_at: 2026-01-25 16:38:02
 
-two:
-  character: two
-  replacement_padlock: two
-  key_digest: MyString
+luffys_previous_password:
+  character: luffy
+  replacement_padlock: luffys_active_password
+  key_digest: <%= key_digest %>
+  expires_at: 2025-01-25
+  unlocked_by: 1
+  last_unlocked_at: 2025-12-25 16:38:02
+
+zoros_active_password:
+  character: zoro
+  key_digest: <%= key_digest %>
   expires_at: 2026-01-25
   unlocked_by: 1
   last_unlocked_at: 2026-01-25 16:38:02
+
+zoros_previous_password:
+  character: zoro
+  replacement_padlock: zoros_active_password
+  key_digest: <%= key_digest %>
+  expires_at: 2025-01-25
+  unlocked_by: 1
+  last_unlocked_at: 2025-12-25 16:38:02
