--- a/test/fixtures/padlock/passwords.yml
+++ b/test/fixtures/padlock/passwords.yml
@@ -11,7 +11,7 @@ luffys_active_password:
 
 luffys_previous_password:
   character: luffy
-  replacement_padlock: luffys_active_password
+  _replacement_padlock: luffys_active_password
   key_digest: <%= key_digest %>
   expires_at: 2025-01-25
   unlocked_by: 1
@@ -26,7 +26,7 @@ zoros_active_password:
 
 zoros_previous_password:
   character: zoro
-  replacement_padlock: zoros_active_password
+  _replacement_padlock: zoros_active_password
   key_digest: <%= key_digest %>
   expires_at: 2025-01-25
   unlocked_by: 1
