--- a/test/fixtures/padlock/passwords.yml
+++ b/test/fixtures/padlock/passwords.yml
@@ -1,33 +1,34 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 <% key_digest = BCrypt::Password.create("password") %>
+<% previous_key_digest = BCrypt::Password.create("old_password") %>
 
 luffys_active_password:
   character: luffy
   key_digest: <%= key_digest %>
   expires_at: 2026-01-25
-  unlocked_by: 1
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:web_login] %>
   last_unlocked_at: 2026-01-25 16:38:02
 
 luffys_previous_password:
   character: luffy
   _replacement_padlock: luffys_active_password
-  key_digest: <%= key_digest %>
+  key_digest: <%= previous_key_digest %>
   expires_at: 2025-01-25
-  unlocked_by: 1
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: 2025-12-25 16:38:02
 
 zoros_active_password:
   character: zoro
   key_digest: <%= key_digest %>
   expires_at: 2026-01-25
-  unlocked_by: 1
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:web_login] %>
   last_unlocked_at: 2026-01-25 16:38:02
 
 zoros_previous_password:
   character: zoro
   _replacement_padlock: zoros_active_password
-  key_digest: <%= key_digest %>
+  key_digest: <%= previous_key_digest %>
   expires_at: 2025-01-25
-  unlocked_by: 1
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: 2025-12-25 16:38:02
