--- a/test/fixtures/padlock/passwords.yml
+++ b/test/fixtures/padlock/passwords.yml
@@ -1,34 +1,65 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 <% key_digest = BCrypt::Password.create("password") %>
-<% previous_key_digest = BCrypt::Password.create("old_password") %>
 
 luffys_active_password:
   character: luffy
   key_digest: <%= key_digest %>
-  expires_at: 2026-01-25
+  expires_at: <%= 1.month.from_now %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:web_login] %>
-  last_unlocked_at: 2026-01-25 16:38:02
+  last_unlocked_at: <%= 1.hour.ago %>
 
 luffys_previous_password:
   character: luffy
   _replacement_padlock: luffys_active_password
-  key_digest: <%= previous_key_digest %>
-  expires_at: 2025-01-25
+  key_digest: <%= BCrypt::Password.create("old_password_one") %>
+  expires_at: <%= 1.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
-  last_unlocked_at: 2025-12-25 16:38:02
+  last_unlocked_at: <%= 1.month.ago %>
+
+luffys_previous_password_two:
+  character: luffy
+  _replacement_padlock: luffys_previous_password
+  key_digest: <%= BCrypt::Password.create("old_password_two") %>
+  expires_at: <%= 2.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 2.month.ago %>
+
+luffys_previous_password_three:
+  character: luffy
+  _replacement_padlock: luffys_previous_password_two
+  key_digest: <%= BCrypt::Password.create("old_password_three") %>
+  expires_at: <%= 3.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 3.month.ago %>
+
+luffys_previous_password_four:
+  character: luffy
+  _replacement_padlock: luffys_previous_password_three
+  key_digest: <%= BCrypt::Password.create("old_password_four") %>
+  expires_at: <%= 4.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 4.month.ago %>
 
 zoros_active_password:
   character: zoro
   key_digest: <%= key_digest %>
-  expires_at: 2026-01-25
+  expires_at: <%= Time.current %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:web_login] %>
-  last_unlocked_at: 2026-01-25 16:38:02
+  last_unlocked_at: <%= 5.minutes.ago %>
 
 zoros_previous_password:
   character: zoro
   _replacement_padlock: zoros_active_password
-  key_digest: <%= previous_key_digest %>
-  expires_at: 2025-01-25
+  key_digest: <%= BCrypt::Password.create("old_password_one") %>
+  expires_at: <%= 1.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
-  last_unlocked_at: 2025-12-25 16:38:02
+  last_unlocked_at: <%= 1.month.ago %>
+
+zoros_previous_password_two:
+  character: zoro
+  _replacement_padlock: zoros_previous_password
+  key_digest: <%= BCrypt::Password.create("old_password_two") %>
+  expires_at: <%= 2.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 2.month.ago %>
