adding more passwords to each character's history

--- a/test/fixtures/padlock/passwords.yml
+++ b/test/fixtures/padlock/passwords.yml
@@ -41,6 +41,30 @@ luffys_previous_password_four:
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 4.month.ago %>
 
+luffys_previous_password_five:
+  character: luffy
+  _replacement_padlock: luffys_previous_password_four
+  key_digest: <%= BCrypt::Password.create("old_password_five") %>
+  expires_at: <%= 5.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 5.month.ago %>
+
+luffys_previous_password_six:
+  character: luffy
+  _replacement_padlock: luffys_previous_password_five
+  key_digest: <%= BCrypt::Password.create("old_password_six") %>
+  expires_at: <%= 5.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 5.month.ago %>
+
+luffys_previous_password_seven:
+  character: luffy
+  _replacement_padlock: luffys_previous_password_six
+  key_digest: <%= BCrypt::Password.create("old_password_seven") %>
+  expires_at: <%= 5.month.ago %>
+  unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
+  last_unlocked_at: <%= 5.month.ago %>
+
 zoros_active_password:
   character: zoro
   key_digest: <%= key_digest %>
