updating passwords fixtures to include created_at to ensure state

--- a/test/fixtures/padlock/passwords.yml
+++ b/test/fixtures/padlock/passwords.yml
@@ -16,6 +16,7 @@ luffys_previous_password:
   expires_at: <%= 1.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 1.month.ago %>
+  created_at: <%= 1.month.ago %>
 
 luffys_previous_password_two:
   character: luffy
@@ -24,6 +25,7 @@ luffys_previous_password_two:
   expires_at: <%= 2.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 2.month.ago %>
+  created_at: <%= 2.month.ago %>
 
 luffys_previous_password_three:
   character: luffy
@@ -32,6 +34,7 @@ luffys_previous_password_three:
   expires_at: <%= 3.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 3.month.ago %>
+  created_at: <%= 3.month.ago %>
 
 luffys_previous_password_four:
   character: luffy
@@ -40,6 +43,7 @@ luffys_previous_password_four:
   expires_at: <%= 4.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 4.month.ago %>
+  created_at: <%= 4.month.ago %>
 
 luffys_previous_password_five:
   character: luffy
@@ -48,22 +52,25 @@ luffys_previous_password_five:
   expires_at: <%= 5.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 5.month.ago %>
+  created_at: <%= 5.month.ago %>
 
 luffys_previous_password_six:
   character: luffy
   _replacement_padlock: luffys_previous_password_five
   key_digest: <%= BCrypt::Password.create("old_password_six") %>
-  expires_at: <%= 5.month.ago %>
+  expires_at: <%= 6.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
-  last_unlocked_at: <%= 5.month.ago %>
+  last_unlocked_at: <%= 6.month.ago %>
+  created_at: <%= 6.month.ago %>
 
 luffys_previous_password_seven:
   character: luffy
   _replacement_padlock: luffys_previous_password_six
   key_digest: <%= BCrypt::Password.create("old_password_seven") %>
-  expires_at: <%= 5.month.ago %>
+  expires_at: <%= 7.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
-  last_unlocked_at: <%= 5.month.ago %>
+  last_unlocked_at: <%= 7.month.ago %>
+  created_at: <%= 7.month.ago %>
 
 zoros_active_password:
   character: zoro
@@ -79,6 +86,7 @@ zoros_previous_password:
   expires_at: <%= 1.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 1.month.ago %>
+  created_at: <%= 1.month.ago %>
 
 zoros_previous_password_two:
   character: zoro
@@ -87,3 +95,4 @@ zoros_previous_password_two:
   expires_at: <%= 2.month.ago %>
   unlocked_by: <%= Padlock::Password.unlocked_bies[:dangerous_action_authorization] %>
   last_unlocked_at: <%= 2.month.ago %>
+  created_at: <%= 2.month.ago %>
