--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,10 @@ default: &default
 development:
   <<: *default
   database: storage/development.sqlite3
+  queue:
+    <<: *default
+    database: storage/development_queue.sqlite3
+    migrations_paths: db/queue_migrate
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
