--- a/config/cache.yml
+++ b/config/cache.yml
@@ -4,8 +4,10 @@ default: &default
     # max_age: <%= 60.days.to_i %>
     max_size: <%= 256.megabytes %>
     namespace: <%= Rails.env %>
+  size_estimate_samples: 1000
 
 development:
+  database: cache
   <<: *default
 
 test:
@@ -13,4 +15,5 @@ test:
 
 production:
   database: cache
+  encrypt: true
   <<: *default
