--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -9,7 +9,19 @@
 #     priority: 2
 #     schedule: at 5am every day
 
-production:
+default: &default
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
+    queue: background
     schedule: every hour at minute 12
+  session_recurring_expire_orphans:
+    class: "Session::Recurring::ExpireOrphanJob"
+    args: [ { batch_size: 100 } ]
+    queue: background
+    schedule: "every day at 1:17am"
+
+development:
+  <<: *default
+
+production:
+  <<: *default
